--- a/public/flexboxedit.css
+++ b/public/flexboxedit.css
@@ -1,3 +1,10 @@
+
+.note-modal-backdrop {
+    display: none !important;
+}
+
+/* */
+
 body {
     font-family: Arial, sans-serif;
     display: flex;
@@ -69,7 +76,7 @@ body {
 }
 
 
-[data-box-content-editable].is-active.is-empty {
+[data-fbe-box-content-editable].is-active.is-empty {
     display: inline-block;
     padding-left: 15px;
     padding-right: 15px;
